...
    switch (_tabController.index) {
      case 0:
        return 'Agenda';
      case 1:
        return ''; // Empty string to hide banner on home tab
      case 2:
        return 'Wedstrijden';
      case 3:
        return 'Teams';
      default:
        return 'Unknown Tab'; // Fallback case for safety
    }
  }
...
